# SkillSecurity

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SkillSecurity需求规格说明书.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  architecture-overview.md  data-classification-engine.md  feishu-approval-integration-todo-zh.md  how-it-works.md  openclaw-risk-assessment-zh.md  phase-1-core-interception.md  phase-2-permission-and-audit.md  phase-3-sdk-and-ecosystem.md  phase-4-alert-and-interaction.md  qa-validation.md  threat-model.md  tier-pro-enterprise.md  unfinished-features-and-ux-plan-zh.md
policies/: default.yaml  development.yaml  openclaw-hardened.yaml  scan-rules.yaml  strict.yaml
scripts/: deploy-github.ps1  deploy-github.sh
specs/001-skill-security-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-skill-security-core/checklists/: requirements.md
specs/001-skill-security-core/contracts/: cli-interface.md  manifest-schema.md  policy-schema.md  python-api.md
src/skillsecurity/: __init__.py  startup.py
src/skillsecurity/approval/: __init__.py  service.py
src/skillsecurity/audit/: __init__.py  logger.py  query.py  redactor.py  rotation.py
src/skillsecurity/cli/: __init__.py  formatter.py  main.py  prompter.py
src/skillsecurity/config/: defaults.py  loader.py  watcher.py
tests/: benchmark.py  conftest.py
tests/integration/: test_audit_pipeline.py  test_engine_e2e.py  test_hot_reload.py  test_privacy_e2e.py  test_scan_pipeline.py
tests/testdata/: dangerous_commands.yaml  safe_commands.yaml
tests/unit/: test_approval.py  test_chain.py  test_chat.py  test_classifier.py  test_cli.py  test_cli_approval.py  test_cli_protect.py  test_cli_security_ops.py  test_command_semantics.py  test_context_policy.py  test_dashboard.py  test_decision.py  test_domains.py  test_entropy.py  test_financial.py  test_integrations.py  test_intel_sync.py  test_loader.py  test_manifest.py  test_matcher.py  test_metrics.py  test_namespace.py  test_outbound.py  test_path_boundary.py  test_permissions.py  test_pii.py  test_policy.py  test_redactor.py  test_rotation.py  test_scanner.py  test_secrets.py  test_selfprotect.py  test_startup_audit.py  test_supplychain.py
(+54 files in other folders)
