[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillsecurity"
version = "0.1.0"
description = "AI Agent Skill/Tool call security protection layer"
readme = "docs/README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "SkillSecurity Contributors" }]
keywords = ["ai", "agent", "security", "tool-call", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "PyYAML>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
watch = ["watchdog>=4.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "watchdog>=4.0",
]

[project.scripts]
skillsecurity = "skillsecurity.cli.main:cli"

[project.urls]
Homepage = "https://github.com/Dreamaple/SkillSecurity"
Repository = "https://github.com/Dreamaple/SkillSecurity"
Documentation = "https://github.com/Dreamaple/SkillSecurity/blob/main/docs/how-it-works.md"

[tool.hatch.build.targets.wheel]
packages = ["src/skillsecurity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["skillsecurity"]
omit = [
    "*/integrations/langchain.py",
    "*/integrations/autogen.py",
    "*/integrations/crewai.py",
    "*/integrations/llamaindex.py",
    "*/integrations/mcp.py",
    "*/integrations/n8n.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["skillsecurity"]
